# lock-free-pc

./: .clang-format  .gitignore  .gitmodules  .travis.yml  22_05.md  CMakeLists.txt  NCI-60.data  README.md  _lockfreepc.cpp  build_dist.sh  concurrency.h  condition.cpp  condition.h  constraint.cpp  constraint.hpp  cooling_house.data  format.sh  graph.cpp  graph.hpp  install_dependencies.sh  lint.sh  main.cpp  setup.py  skeleton.cpp  skeleton.h  threadsafe_queue.cpp  watcher.cpp  watcher.h  worker.cpp  worker.h
.github/: manylinux1_x86_64-cmake-boost.dockerfile
.github/workflows/: ci.yml  compile.yml  lint.yml  manylinux-build.yml  test_python.yml
data/: MCC.csv  NCI-60.csv  Saureus.csv  Saureus.data
dev/bench/: data.js
doc/: vortrag_feedback.md
doc/meetingnotes/: 06_26.md  18_05.md  29_05.md
doc/notebooks/: runtime_plots.ipynb
lockfreepc/: __init__.py  result_graph.py  skeleton.py
src/: CMakeLists.txt  _lockfreepc.cpp  concurrency.hpp  constraint.cpp  constraint.hpp  graph.cpp  graph.hpp  main.cpp  skeleton.cpp  skeleton.h  skeleton.hpp  v_structure_worker.cpp  v_structure_worker.hpp  watcher.cpp  watcher.h  watcher.hpp  worker.cpp  worker.h  worker.hpp
tests/: check_diff.sh  conftest.py
tests/e2e/: test_skeleton.py
tests/fixtures/: cooling_house.csv  cooling_house_skeleton.txt  pcalg-2.6.1_nci-60_skeleton.txt
tests/regression/: test_skeleton_performance.py
